--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,6 @@
-version: '3.1'
+version: '3.3'
 services:
-  springboot:
-    image: dockerhandson/maven-web-application:VERSION
-    restart: always
+  tomcatcontainer:
+    image: tomcatimage:${BUILD_ID}
     ports:
-    - 9090:8080
-    networks:
-    - mavenappbridge
-networks:
-  mavenappbridge:
+      - 8542:8080
