--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.3'
 services:
+  tomcat:
+    build: .
+    image: tomcatimage:${BUILD_ID}
   tomcatcontainer:
     image: tomcatimage:${BUILD_ID}
     ports:
