--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -18,12 +18,12 @@ spec:
     spec:
       containers:
         - name: mavenwebappcontainer
-          image: katikanaveenkumar/mavenwebappimage:${BUILD_ID}
           ports:
             - containerPort: 8080
+          image: katikanaveenkumar/mavenwebappimage:{{ .Values.image }}
           env:
-            - name: IMAGE_TAG
-              value: "${BUILD_ID}"
+           - name: IMAGE
+             value: "{{ .Values.imageTag }}"
 ---
 apiVersion: v1
 kind: Service
