--- a/mavenwebappdeployment.yaml
+++ b/mavenwebappdeployment.yaml
@@ -20,10 +20,7 @@ spec:
         - name: mavenwebappcontainer
           ports:
             - containerPort: 8080
-          image: "{{ .Values.IMAGE }}"
-          env:
-            - name: IMAGE
-              value: "${DOCKER_IMAGE}"
+          image: katikanaveenkumar/mavenwebappimage:tag
 ---
 apiVersion: v1
 kind: Service
